# Apply2

./: .gitignore  AUTHORS  LICENSE  Makefile  README.md  configure  configure.ac
client/: Makefile
client/src/: cols.js  cols.ts  disembark.css  disembark.js  disembark.ts  filter.js  flapjax.js  flapjax.ts  util.js
client/www/: disembark.css  disembark.html
exp/: fx.ts  fxDom.ts  fxTests.ts  tests.html
sample/: private.key
scripts/: invite-from-csv  invite.py
server/: Makefile  apply-nginx.conf  data.json  random.txt
server/src/: apply.go  caps.go  caps_test.go  model.go  model_test.go  sample.go  server.go  util.go
server/src/main/: apply.go
server/src/model/: model.go
server/src/sample/: sample.go
server/src/server/: server.go
server/src/util/: util.go
src/apply2/: apply.go
src/caps/: caps.go  caps_test.go
src/model/: data.json  embark.go  model.go  model_test.go
src/sample/: sample.go
src/server/: server.go
src/umass/: umass.go
vagrant/ubuntu/: Vagrantfile  bootstrap.sh
www/: cols.ts  disembark.html  disembark.ts  filter.ts  flapjax.ts  password.ts  priorityQueue.ts  priorityQueue2.ts  tsUnit.ts  util.ts
